<resources>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="app_name">Stack2</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="stack">Stack</string>
    <string name="already_register">Already Register ?</string>
    <string name="google_login_here">google login here</string>

</resources>
