<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    tools:context="com.example.urusa7.stack2.Register">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_launcher"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:id="@+id/logo_Register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stack"
        android:layout_marginLeft="70dp"
        android:layout_alignBottom="@+id/logo_Register"
        android:layout_alignLeft="@+id/logo_Register"
        android:layout_alignStart="@+id/logo_Register"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="5dp"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_Register"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/background_email"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/register_name"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:background="@drawable/background_email"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_alignLeft="@+id/register_name"
        android:layout_alignStart="@+id/register_name"
        android:layout_alignRight="@+id/register_name"
        android:layout_alignEnd="@+id/register_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/background_email"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/register_email"
        android:layout_alignStart="@+id/register_email"
        android:layout_alignRight="@+id/register_email"
        android:layout_alignEnd="@+id/register_email" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/register_password"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_alignRight="@+id/register_password"
        android:layout_alignEnd="@+id/register_password"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        style="@style/com_facebook_loginview_silver_style"
        android:background="@color/bb"
        android:id="@+id/register_btn" />

    <TextView
        android:id="@+id/loginBackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/already_register"
        android:textSize="17sp"
        android:textStyle="italic|normal"
        android:textColor="@color/purple_red"/>

</RelativeLayout>
